--- a/css/style.css
+++ b/css/style.css
@@ -141,3 +141,17 @@ a{
 	margin: 2em; 
 	float: right;
 }
+
+/* Pour les formulaire */
+
+form{
+	width: 25%;
+	padding: 12px 20px;
+	margin: 8px 5px 4px 5px;
+	box-sizing: border-box;	
+	display: flex;
+	flex-direction: column;
+}
+input:invalid {
+  border: 1px solid red;
+}
